--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="stylesheet" href="css/index.css">
+<link rel="stylesheet" href="index.css">
 
 <head lang="en">
     <meta charset="UTF-8">
