--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <h1> Siham Egbaria </h1>
 
-<h3><a href="https://github.com/sihamEgb/lesson03/tweet.html">Tweet & Comment</a></h3>
+<h3><a href="http://sihamegb.github.io/lesson03/tweet.html">Tweet & Comment</a></h3>
 
-<h3><a href="https://github.com/sihamEgb/lesson03/github.html">Github page</a></h3>
+<h3><a href="http://sihamegb.github.io/lesson03/github.html">Github page</a></h3>
 
-<h3><a href="https://github.com/sihamEgb/lesson03/new_moodle.html">New moodle view</a></h3>
+<h3><a href="http://sihamegb.github.io/lesson03/new_moodle.html">New moodle view</a></h3>
 </body>
 </html>
