--- a/tweet.html
+++ b/tweet.html
@@ -2,7 +2,7 @@
 
 <html>
 
-<link rel="stylesheet" href="css/twitter.css">
+<link rel="stylesheet" href="twitter.css">
 <script src="js/main.js"></script>
 
 <head>
