--- a/new_moodle.html
+++ b/new_moodle.html
@@ -25,7 +25,7 @@
 
     <link rel="stylesheet" type="text/css" href="http://moodle.technion.ac.il/theme/yui_combo.php?3.9.1/build/cssreset/cssreset-min.css&amp;3.9.1/build/cssfonts/cssfonts-min.css&amp;3.9.1/build/cssgrids/cssgrids-min.css&amp;3.9.1/build/cssbase/cssbase-min.css" /><script type="text/javascript" src="http://moodle.technion.ac.il/theme/yui_combo.php?3.9.1/build/simpleyui/simpleyui-min.js&amp;3.9.1/build/loader/loader-min.js"></script><script id="firstthemesheet" type="text/css">/** Required in order to fix style inclusion problems in IE with YUI **/</script><link rel="stylesheet" type="text/css" href="http://moodle.technion.ac.il/theme/styles.php/standard/1396154678/all" />
 
-    <link rel="stylesheet" type="text/css" href="css/new_moodle.css">
+    <link rel="stylesheet" type="text/css" href="new_moodle.css">
 
     <script type="text/javascript" src="http://moodle.technion.ac.il/lib/javascript.php/1395902272/lib/javascript-static.js"></script>
 
